# soag

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/github/: api.rs  endpoints.rs  helpers.rs  mod.rs
src/api/gitlab/: api.rs  endpoints.rs  helpers.rs  mod.rs
src/arguments/: mod.rs
src/config/: config.rs  helpers.rs  mod.rs
src/git/: mod.rs  utils.rs
src/output/: output.rs
src/rep/: mod.rs  utils.rs
src/soag/: flags.rs  mod.rs  soag.rs  utils.rs
src/utils/: mod.rs  utils.rs
